allow flags for validation
