# src/main/resources/webroot/openapi.yaml
@@ -44,6 +44,17 @@ paths:
           example: 
             - https://raw.githubusercontent.com/GSA/fedramp-automation/refs/heads/develop/src/validations/constraints/fedramp-external-constraints.xml
             - https://raw.githubusercontent.com/GSA/fedramp-automation/refs/heads/develop/src/validations/constraints/fedramp-external-constraints.xml
+        - in: query
+          name: flags
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
+              enum: [disable-schema, disable-constraint]
+
+          description: URIs of metaschema extension modules to load
+          example: disable-schema
       responses:
         '200':
           $ref: '#/components/responses/SarifResponse'
